# fxbasis

./: .gitignore  CLAUDE.md  README.md  config.yaml  demo.ipynb  pyproject.toml
fxbasis/: __init__.py  basis.py  curve.py  market.py  ois.py  utils.py
fxbasis/conventions/: __init__.py  currencies.py  day_count.py
fxbasis/providers/: __init__.py  base.py  bloomberg.py  static.py
tests/: conftest.py  test_basis.py  test_curve.py  test_market.py  test_ois.py
